--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "b1c4bd7c",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "7021ab02",
    "metadata": {},
    "outputs": [],
@@ -64,10 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "70aec980",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 3651.438, 6259.675, 7823.212, 8342.05, 7823.588, 6260.425, 3652.563, 0.0]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "span = 50\n",
     "\n",
@@ -104,7 +115,9 @@
     "        maxSF_minus.append(round(SF_minus, 3))\n",
     "    maxBMs.append(maxBM)\n",
     "    maxSFs_plus.append(maxSF_plus)\n",
-    "    maxSFs_minus.append(maxSF_minus)"
+    "    maxSFs_minus.append(maxSF_minus)\n",
+    "\n",
+    "maxBM"
    ]
   },
   {
@@ -117,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "3ec70ad1",
    "metadata": {},
    "outputs": [],
@@ -161,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "eeb374fb",
    "metadata": {},
    "outputs": [],
@@ -184,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "3f1b5cb6",
    "metadata": {},
    "outputs": [
@@ -194,7 +207,7 @@
        "[0.088, 0.088, 0.088]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "efcaaba5",
    "metadata": {},
    "outputs": [],
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "56278039",
    "metadata": {},
    "outputs": [
@@ -246,7 +259,7 @@
        "[-3.739698609263685e-16, -0.40500000000000025, -0.3500000000000001]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "5080febe",
    "metadata": {},
    "outputs": [],
@@ -302,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "2657c077",
    "metadata": {},
    "outputs": [],
@@ -321,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "3620ecd7",
    "metadata": {
     "pycharm": {
@@ -338,7 +351,7 @@
        " [30.828512, 34.982112, 27.947919999999996])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "f8d3acca",
    "metadata": {
     "pycharm": {
@@ -575,7 +588,7 @@
        "       Class70RT    404.810   491.610   579.810  666.610  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "8da0042b",
    "metadata": {
     "scrolled": true
@@ -599,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "7e344224",
    "metadata": {},
    "outputs": [
@@ -671,7 +684,7 @@
        "comb3       0          0          1    -3.500000e-01  734.1004  27.947920"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
