-pier load calculation

--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -700,17 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "d73f6795",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "1.3010299956639813"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,13 +721,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "6544b3d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "span = 30\n",
+    "\n",
     "c_c = 1.5\n",
+    "# span = 30\n",
+    "span = 30 - c_c\n",
     "reactions = []\n",
     "\n",
     "max_sums = []\n",
@@ -755,7 +757,7 @@
     "    nright = 0\n",
     "    \n",
     "    head_at = 0\n",
-    "    step = 0.01\n",
+    "    step = 0.001\n",
     "    for i in range(int(90/step)):\n",
     "        left = 0\n",
     "        right = 0\n",
@@ -776,7 +778,7 @@
     "            nleft, nright = left, right\n",
     "            max_sum_at = head_at\n",
     "            \n",
-    "        head_at= round(head_at + step, int(abs(math.log10(step))))\n",
+    "        head_at= round(head_at + step, int(abs(5)))\n",
     "    max_sums.append(sumlr)\n",
     "    lefts.append(nleft)\n",
     "    rights.append(nright)\n",
@@ -785,9 +787,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "id": "5bd76d17",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -818,41 +822,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>RL</th>\n",
-       "      <td>199.104000</td>\n",
-       "      <td>480.42</td>\n",
-       "      <td>341.826667</td>\n",
+       "      <td>253.671930</td>\n",
+       "      <td>478.863158</td>\n",
+       "      <td>392.208772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RR</th>\n",
-       "      <td>292.440667</td>\n",
-       "      <td>436.46</td>\n",
-       "      <td>348.476667</td>\n",
+       "      <td>227.478947</td>\n",
+       "      <td>433.642105</td>\n",
+       "      <td>297.584211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sum</th>\n",
-       "      <td>491.544667</td>\n",
-       "      <td>916.88</td>\n",
-       "      <td>690.303333</td>\n",
+       "      <td>481.150877</td>\n",
+       "      <td>912.505263</td>\n",
+       "      <td>689.792982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max_load_at</th>\n",
-       "      <td>75.060000</td>\n",
-       "      <td>39.73</td>\n",
-       "      <td>32.750000</td>\n",
+       "      <td>73.550000</td>\n",
+       "      <td>38.230000</td>\n",
+       "      <td>31.209000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                class A    70RW        70RT\n",
-       "RL           199.104000  480.42  341.826667\n",
-       "RR           292.440667  436.46  348.476667\n",
-       "sum          491.544667  916.88  690.303333\n",
-       "max_load_at   75.060000   39.73   32.750000"
+       "                class A        70RW        70RT\n",
+       "RL           253.671930  478.863158  392.208772\n",
+       "RR           227.478947  433.642105  297.584211\n",
+       "sum          481.150877  912.505263  689.792982\n",
+       "max_load_at   73.550000   38.230000   31.209000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "id": "3c15f66d",
    "metadata": {},
    "outputs": [
@@ -873,7 +877,7 @@
        "1.025"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,13 +896,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "id": "636ba1e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hjgjh\n"
+     ]
+    }
+   ],
    "source": [
-    "span = 30\n",
-    "c_c = 1.5\n",
+    "# span = 30\n",
+    "# c_c = 1.5\n",
     "veh = ll_A\n",
     "dummy_load = list(veh.loadpair)\n",
     "no = 2\n",
@@ -916,14 +928,14 @@
     "    \n",
     "left = []\n",
     "right = []\n",
-    "head_at = 75.05\n",
+    "head_at = 73.55\n",
     "\n",
     "for j in final_load:\n",
     "    rb = find_rb(span, head_at-j[0], c_c/2, c_c/2)*j[1]\n",
     "    ra = find_ra(span, head_at-j[0]-(span+c_c), c_c/2, c_c/2)*j[1]\n",
     "    temp_load = 0\n",
     "    if head_at-j[0] == span+c_c/2:\n",
-    "#         print('hjgjh')\n",
+    "        print('hjgjh')\n",
     "        temp_load = (j[1])/2\n",
     "        ra = find_ra(span, head_at-j[0]-(span+c_c), c_c/2, c_c/2)*temp_load\n",
     "        rb = find_rb(span, head_at-j[0], c_c/2, c_c/2)*temp_load\n",
@@ -933,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "id": "eac804e7",
    "metadata": {},
    "outputs": [
@@ -967,141 +979,141 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>75.05</td>\n",
+       "      <td>73.55</td>\n",
        "      <td>27</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>73.95</td>\n",
+       "      <td>72.45</td>\n",
        "      <td>27</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>70.75</td>\n",
+       "      <td>69.25</td>\n",
        "      <td>114</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>69.55</td>\n",
+       "      <td>68.05</td>\n",
        "      <td>114</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>65.25</td>\n",
+       "      <td>63.75</td>\n",
        "      <td>68</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>62.25</td>\n",
+       "      <td>60.75</td>\n",
        "      <td>68</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>-1.700</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>59.25</td>\n",
+       "      <td>57.75</td>\n",
        "      <td>68</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>5.100</td>\n",
+       "      <td>1.789474</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>56.25</td>\n",
+       "      <td>54.75</td>\n",
        "      <td>68</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>11.900</td>\n",
+       "      <td>8.947368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>36.25</td>\n",
+       "      <td>34.75</td>\n",
        "      <td>27</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>22.725</td>\n",
+       "      <td>22.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>35.15</td>\n",
+       "      <td>33.65</td>\n",
        "      <td>27</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>23.715</td>\n",
+       "      <td>23.542105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>31.95</td>\n",
+       "      <td>30.45</td>\n",
        "      <td>114</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>112.290</td>\n",
+       "      <td>112.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>30.75</td>\n",
+       "      <td>29.25</td>\n",
        "      <td>114</td>\n",
-       "      <td>58.425000</td>\n",
-       "      <td>58.425</td>\n",
+       "      <td>58.500000</td>\n",
+       "      <td>58.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>26.45</td>\n",
+       "      <td>24.95</td>\n",
        "      <td>68</td>\n",
-       "      <td>59.953333</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>59.529825</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>23.45</td>\n",
+       "      <td>21.95</td>\n",
        "      <td>68</td>\n",
-       "      <td>53.153333</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>52.371930</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>20.45</td>\n",
+       "      <td>18.95</td>\n",
        "      <td>68</td>\n",
-       "      <td>46.353333</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>45.214035</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>17.45</td>\n",
+       "      <td>15.95</td>\n",
        "      <td>68</td>\n",
-       "      <td>39.553333</td>\n",
-       "      <td>0.000</td>\n",
+       "      <td>38.056140</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      pos  load       left    right\n",
-       "0   75.05    27   0.000000    0.000\n",
-       "1   73.95    27   0.000000    0.000\n",
-       "2   70.75   114   0.000000    0.000\n",
-       "3   69.55   114   0.000000    0.000\n",
-       "4   65.25    68   0.000000    0.000\n",
-       "5   62.25    68   0.000000   -1.700\n",
-       "6   59.25    68   0.000000    5.100\n",
-       "7   56.25    68   0.000000   11.900\n",
-       "8   36.25    27   0.000000   22.725\n",
-       "9   35.15    27   0.000000   23.715\n",
-       "10  31.95   114   0.000000  112.290\n",
-       "11  30.75   114  58.425000   58.425\n",
-       "12  26.45    68  59.953333    0.000\n",
-       "13  23.45    68  53.153333    0.000\n",
-       "14  20.45    68  46.353333    0.000\n",
-       "15  17.45    68  39.553333    0.000"
+       "      pos  load       left       right\n",
+       "0   73.55    27   0.000000    0.000000\n",
+       "1   72.45    27   0.000000    0.000000\n",
+       "2   69.25   114   0.000000    0.000000\n",
+       "3   68.05   114   0.000000    0.000000\n",
+       "4   63.75    68   0.000000    0.000000\n",
+       "5   60.75    68   0.000000    0.000000\n",
+       "6   57.75    68   0.000000    1.789474\n",
+       "7   54.75    68   0.000000    8.947368\n",
+       "8   34.75    27   0.000000   22.500000\n",
+       "9   33.65    27   0.000000   23.542105\n",
+       "10  30.45   114   0.000000  112.200000\n",
+       "11  29.25   114  58.500000   58.500000\n",
+       "12  24.95    68  59.529825    0.000000\n",
+       "13  21.95    68  52.371930    0.000000\n",
+       "14  18.95    68  45.214035    0.000000\n",
+       "15  15.95    68  38.056140    0.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,17 +1124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "96be3a38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(315.86333333333334, 290.88, 606.7433333333333)"
+       "(202.32982456140354, 274.978947368421, 477.30877192982456)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d49f70d",
+   "id": "16e70a4c",
    "metadata": {},
    "outputs": [],
    "source": []
