--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "id": "b1c4bd7c",
    "metadata": {
     "pycharm": {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "id": "7021ab02",
    "metadata": {
     "pycharm": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "id": "70aec980",
    "metadata": {
     "pycharm": {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "id": "3ec70ad1",
    "metadata": {
     "pycharm": {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "id": "eeb374fb",
    "metadata": {
     "pycharm": {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 78,
    "id": "3f1b5cb6",
    "metadata": {
     "pycharm": {
@@ -218,7 +218,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 8
+     "execution_count": 78
     }
    ],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "id": "efcaaba5",
    "metadata": {
     "pycharm": {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "id": "56278039",
    "metadata": {
     "pycharm": {
@@ -276,7 +276,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 10
+     "execution_count": 80
     }
    ],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "id": "5080febe",
    "metadata": {
     "pycharm": {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "id": "2657c077",
    "metadata": {
     "pycharm": {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "id": "3620ecd7",
    "metadata": {
     "pycharm": {
@@ -373,7 +373,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 13
+     "execution_count": 83
     }
    ],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "id": "f8d3acca",
    "metadata": {
     "pycharm": {
@@ -400,7 +400,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 14
+     "execution_count": 84
     }
    ],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "id": "8da0042b",
    "metadata": {
     "scrolled": true,
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "id": "7e344224",
    "metadata": {
     "pycharm": {
@@ -440,7 +440,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 16
+     "execution_count": 86
     }
    ],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "id": "74505193",
    "metadata": {
     "pycharm": {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "id": "d73f6795",
    "metadata": {
     "pycharm": {
@@ -485,7 +485,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 18
+     "execution_count": 88
     }
    ],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "id": "6544b3d0",
    "metadata": {
     "pycharm": {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "id": "5bd76d17",
    "metadata": {
     "pycharm": {
@@ -571,12 +571,13 @@
    },
    "outputs": [],
    "source": [
-    "df1=pd.DataFrame([lefts, rights, max_sums, max_sums_at], columns=['class A', '70RW', '70RT'], index=['RL', \"RR\", 'sum', 'max_load_at'])"
+    "df1=pd.DataFrame([lefts, rights, max_sums], columns=['class A', '70RW', '70RT'], index=['RL', \"RR\", 'sum']).T\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "df1.to_csv('outputs/Live_Loads_Seismic.csv')\n"
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "id": "3c15f66d",
    "metadata": {
     "pycharm": {
@@ -605,7 +606,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 22
+     "execution_count": 92
     }
    ],
    "source": [
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "id": "636ba1e1",
    "metadata": {
     "pycharm": {
@@ -667,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "id": "eac804e7",
    "metadata": {
     "pycharm": {
@@ -682,7 +683,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 24
+     "execution_count": 94
     }
    ],
    "source": [
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "id": "96be3a38",
    "metadata": {
     "pycharm": {
@@ -705,7 +706,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 25
+     "execution_count": 95
     }
    ],
    "source": [
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "id": "0d49f70d",
    "metadata": {
     "pycharm": {
