--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -25,7 +25,8 @@
     "from carriageway import Carriageway\n",
     "from impact_factor import impact\n",
     "from load import ll_A, ll_70R, ll_70RT\n",
-    "from reaction import find_bm, find_sf, find_ra, find_rb"
+    "from reaction import find_bm, find_sf, find_ra, find_rb\n",
+    "from bridge_specs import span,c_c"
    ]
   },
   {
@@ -81,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "span = 50\n",
+    "\n",
     "\n",
     "maxBMs = []\n",
     "maxSFs_plus = []\n",
@@ -503,8 +504,8 @@
    },
    "outputs": [],
    "source": [
-    "span = 30\n",
-    "c_c = 1.5\n",
+    "\n",
+    "\n",
     "reactions = []\n",
     "\n",
     "max_sums = []\n",
@@ -632,8 +633,6 @@
    },
    "outputs": [],
    "source": [
-    "span = 30\n",
-    "c_c = 1.5\n",
     "veh = ll_A\n",
     "dummy_load = list(veh.loadpair)\n",
     "no = 2\n",
