--- a/Seismic.ipynb
+++ b/Seismic.ipynb
@@ -93,19 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 120,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "  Unnamed: 0      Left     Right      Sum\n",
-      "0  Dead Load  4584.375  4584.375  9168.75\n"
+      "0    9168.75\n",
+      "1     650.00\n",
+      "2     792.00\n",
+      "3     300.00\n",
+      "Name: Sum, dtype: float64\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "print(df2.iloc[:1])"
+    "print(df2.iloc[:,3])"
    ],
    "metadata": {
     "collapsed": false,
@@ -118,7 +121,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Calculation of \n"
+    "Calculation of Max Reactions\n"
    ],
    "metadata": {
     "collapsed": false,
