--- a/Seismic.ipynb
+++ b/Seismic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -11,7 +11,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from bridge_specs import box,pier"
    ]
   },
   {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -38,10 +40,15 @@
    },
    "outputs": [],
    "source": [
+    "\"\"\"Data of Live Loads\"\"\"\n",
     "df1=pd.read_csv('outputs/Live_Loads_Seismic.csv')\n",
+    "\n",
+    "\n",
+    "\"\"\"Data of Dead Loads\"\"\"\n",
     "df2=pd.read_csv('outputs/DL_for_Seismic.csv')\n",
     "\n",
-    "\n",
+    "\"\"\"Data of eccentricity\"\"\"\n",
+    "df3=pd.read_excel('outputs/max_e.xlsx')\n",
     "\n",
     "\n"
    ]
@@ -61,27 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "  Unnamed: 0          RL          RR         sum\n",
-      "0    class A  199.104000  292.440667  491.544667\n",
-      "1       70RW  480.420000  436.460000  916.880000\n",
-      "2       70RT  341.826667  348.476667  690.303333\n",
-      "        Unnamed: 0      Left     Right      Sum\n",
-      "0        Dead Load  4584.375  4584.375  9168.75\n",
-      "1       Other Load   325.000   325.000   650.00\n",
-      "2     Surface Load   396.000   396.000   792.00\n",
-      "3  Pedestrian load   150.000   150.000   300.00\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "execution_count": 23,
+   "outputs": [],
    "source": [
-    "print (df1)\n",
-    "print(df2)"
+    "\n",
+    "ecc=np.abs(np.around(np.array(df3.iloc[:,4].values.tolist()),3))\n",
+    "df1=df1.assign(L_Larm=pier.l_larm,R_Larm=pier.r_larm,T_Larm=ecc)\n",
+    "df2=df2.assign(L_Larm=pier.l_larm,R_Larm=pier.r_larm,T_Larm=pier.t_larm)\n",
+    "df2.iloc[3,6]=0\n",
+    "df_loads=pd.concat([df1,df2])\n",
+    "df_loads['MomL']=df_loads['RL']*df_loads['L_Larm']+df_loads['RR']*df_loads['R_Larm']\n",
+    "df_loads['MomT']=(df_loads['RL']+df_loads['RR'])*df_loads['T_Larm']"
    ],
    "metadata": {
     "collapsed": false,
@@ -93,22 +90,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "0    9168.75\n",
-      "1     650.00\n",
-      "2     792.00\n",
-      "3     300.00\n",
-      "Name: Sum, dtype: float64\n"
+      "Maximum Longitudinal Moment: 60529.6491\n",
+      "Maximum Transverse Moment: 16419.3867\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
-    "print(df2.iloc[:,3])"
+    "print(f\"Maximum Longitudinal Moment: {sum(df_loads['MomL'])}\\nMaximum Transverse Moment: {sum(df_loads['MomT'])}\")\n",
+    "# print(df3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "print (ecc)"
    ],
    "metadata": {
     "collapsed": false,
@@ -132,19 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "10910.749999999998 916.88 300.0\n",
-      "10910.749999999998 11154.125999999998\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "i=sum(df2.iloc[:,3])\n",
+    "i=round(sum(df2.iloc[:,3]),5)\n",
     "j=max(df1.iloc[:,3])\n",
     "k=df2.iloc[3,3]\n",
     "lon=[1,0,0]\n",
@@ -152,7 +169,7 @@
     "lon_max=i*lon[0]+j*lon[1]+k*lon[2]\n",
     "tra_max=i*tra[0]+j*tra[1]+k*tra[2]\n",
     "print(i,j,k)\n",
-    "print(lon_max,tra_max)"
+    "print(f\"Maximum longitudinal force: {lon_max}\\nMaximum Transverse Force: {tra_max}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -177,9 +194,7 @@
   },
   {
    "cell_type": "code",
-   "source": [
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -187,22 +202,13 @@
      "is_executing": false
     }
    },
-   "execution_count": 110,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[0.0, 6.25, 12.5, 18.75, 25.0, 31.25, 37.5, 43.75, 50.0]"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 111
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "\n",
     "sc"
