--- a/Seismic.ipynb
+++ b/Seismic.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"g:\\python\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3441\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-3e11a77bcc33>\"\u001b[1;36m, line \u001b[1;32m3\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from bridge_specs import box,pier\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"G:\\Python\\PSC_bridge\\bridge_specs.py\"\u001b[1;36m, line \u001b[1;32m81\u001b[0m\n\u001b[1;33m    pcap_area=\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ],
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (bridge_specs.py, line 81)",
+     "output_type": "error"
+    }
+   ],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\n",
@@ -90,17 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "Maximum Longitudinal Moment: 60529.6491\n",
-      "Maximum Transverse Moment: 16419.3867\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(f\"Maximum Longitudinal Moment: {sum(df_loads['MomL'])}\\nMaximum Transverse Moment: {sum(df_loads['MomT'])}\")\n",
     "# print(df3)"
